[package]
name = "sleevesbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rand = "0.8.3"
riff-wave = "0.1.2"

[dependencies.serenity]
version = "0.10.5"
default-features = false
features = [ "cache", "gateway", "standard_framework", "rustls_backend", "voice" ]

[dependencies.songbird]
version = "0.1.6"
features = [ "serenity", "rustls" ]

[dependencies.tokio]
version = "1.5.0"
features = [ "rt-multi-thread" ]

[dependencies.uuid]
version = "0.8.2"
default-features = false
features = [ "v4" ]
